--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "pinia": "^3.0.3",
+    "sweetalert2": "^11.22.2",
     "vue-chartjs": "^5.3.2",
     "vue3-datepicker": "^0.4.0"
   }
