--- a/studyflow/package.json
+++ b/studyflow/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.22.2",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
