--- a/studyflow/package.json
+++ b/studyflow/package.json
@@ -12,6 +12,7 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "@vueuse/core": "^13.6.0",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "dotenv": "^16.5.0",
